2019-03-05  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-load.el: "eev-prepared.el", "eev-bounded.el" and
	"eev-channels.el" are no longer loaded by default.

	* eev-elinks.el (ee-efunctiondescr-re): treat Lisp macros as
	functions.

	* eev-beginner.el: new file.

	* eev-intro.el (find-eev-quick-intro): the installation script now
	loads "eev-beginner.el" instead of "eev-readme.el".

	* eev-tlinks.el: added a "(require 'eev-wrap)".
	(find-tkdiff): moved to eev-plinks.el.
	(ee-upload-links, ee-download-links, find-upload-links)
	(find-download-links, ut, dt): commented out.
	(find-eev-install-links): use "rm -fv" instead of "rm -v".
	(find-eev-install-links): load "eev-beginner.el" instead of
	"eev-readme.el".
	(find-eev-install-links): changed "eev2-all.el" to "eev-load.el"
	everywhere.

	* eev-intro.el (find-eev-quick-intro): added material in the
	sections about links to PDFs.

2019-03-04  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-pdflike.el (ee-pdftotext-replace-bad-ffs): new function.
	(find-sh-page): use `find-callprocess00' and
	`ee-pdftotext-replace-bad-ffs'.
	(ee-find-pdf-text): return a list instead of a string.
	(ee-find-pdftotext-text): return a list instead of a string.

2019-03-03  Eduardo Ochs  <eduardoochs@gmail.com>

	* eejump.el: rewrote most comments, deleted some `eejump-<nnn>'s, and made
	`eejump-6': point to (find-escripts-intro).

	* eev-elinks.el (ee-find-intro-links): set the correct default
	value for `stem'.

2019-03-02  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-anchors.el: converted to utf-8.

	* eev-audiovideo.el: converted to utf-8.

	* eev-blinks.el: converted to utf-8.

	* eev-brxxx.el: converted to utf-8.

	* eev-code.el: converted to utf-8.

	* eev-edit.el: converted to utf-8.

	* eev-elinks.el: converted to utf-8.

	* eev-env.el: converted to utf-8.

	* eev-eval.el: converted to utf-8.

	* eev-intro.el: converted to utf-8.

	* eev-mode.el: converted to utf-8.

	* eev-pdflike.el: converted to utf-8.
