@@ -1,3 +1,8 @@
+2019-03-08  Eduardo Ochs  <eduardoochs@gmail.com>
+
+	* eev-pdflike.el (ee-find-texworkspdf-page): new function.
+	(find-texworkspdf-page, code-texworkspdf-page): new functions.
+
 2019-03-05  Eduardo Ochs  <eduardoochs@gmail.com>
 
 	* eev-load.el: "eev-prepared.el", "eev-bounded.el" and
